[gd_scene load_steps=14 format=3 uid="uid://c0f1x068lpnl1"]

[ext_resource type="Script" uid="uid://f0w6reycq67y" path="res://Scenes/arcade_position.gd" id="1_0uqiu"]
[ext_resource type="AudioStream" uid="uid://b8hvhwi0h2hsa" path="res://Resources/Audio/SFX/place1.mp3" id="2_x6rcn"]

[sub_resource type="Shader" id="Shader_0uqiu"]
code = "// NOTE: Shader automatically converted from Godot Engine 4.4.1.stable.mono's StandardMaterial3D.

shader_type spatial;
render_mode blend_mix, depth_draw_opaque, cull_back, diffuse_burley, specular_schlick_ggx, unshaded;

uniform vec4 albedo : source_color;
uniform sampler2D texture_albedo : source_color, filter_linear_mipmap, repeat_enable;
uniform ivec2 albedo_texture_size;
uniform float point_size : hint_range(0.1, 128.0, 0.1);

uniform float roughness : hint_range(0.0, 1.0);
uniform sampler2D texture_metallic : hint_default_white, filter_linear_mipmap, repeat_enable;
uniform vec4 metallic_texture_channel;
uniform sampler2D texture_roughness : hint_roughness_r, filter_linear_mipmap, repeat_enable;

uniform float specular : hint_range(0.0, 1.0, 0.01);
uniform float metallic : hint_range(0.0, 1.0, 0.01);

uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;

void vertex() {
	UV = UV * uv1_scale.xy + uv1_offset.xy;
}

void fragment() {
	vec2 base_uv = UV;

	vec4 albedo_tex = texture(texture_albedo, base_uv);
	ALBEDO = albedo.rgb * albedo_tex.rgb * (sin(TIME * 6.0) * 0.4 + 1.0);

	float metallic_tex = dot(texture(texture_metallic, base_uv), metallic_texture_channel);
	METALLIC = metallic_tex * metallic;
	SPECULAR = specular;

	vec4 roughness_texture_channel = vec4(1.0, 0.0, 0.0, 0.0);
	float roughness_tex = dot(texture(texture_roughness, base_uv), roughness_texture_channel);
	ROUGHNESS = roughness_tex * roughness;
	ALPHA *= albedo.a * albedo_tex.a;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x6rcn"]
render_priority = 0
shader = SubResource("Shader_0uqiu")
shader_parameter/albedo = Color(0, 1, 0.25, 0.129412)
shader_parameter/albedo_texture_size = Vector2i(0, 0)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = Vector4(1, 0, 0, 0)
shader_parameter/specular = 0.5
shader_parameter/metallic = 0.0
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)

[sub_resource type="BoxMesh" id="BoxMesh_0uqiu"]
size = Vector3(1, 1.94, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_0uqiu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0uqiu"]
bg_color = Color(0, 1, 0, 0.207843)

[sub_resource type="BoxShape3D" id="BoxShape3D_x6rcn"]
size = Vector3(0.187744, 2.16614, 0.19043)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0uqiu"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_0uqiu"]
material = SubResource("StandardMaterial3D_0uqiu")
radius = 0.4
height = 1.8

[sub_resource type="CylinderMesh" id="CylinderMesh_0uqiu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x6rcn"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_0uqiu"]
viewport_path = NodePath("SubViewport")

[node name="ArcadePosition" type="Node3D"]
script = ExtResource("1_0uqiu")
messages_arcade = Array[String](["Mid game to be fair", "This game is so fair and fun!", "Coooool.... yeah.... I'm enjoying it....", "Kinda boring, but playable", "70s was a better time not gonna lie", "My NDS has better games than this", "I died, blame the game", "I'm gonna get #1 soon!", "I'm so close to getting #1", "GTA 6 is better than this crap."])
messages_happy = Array[String](["Time to make a living!", "I LOVE GAMBLING", "I'm so addicted to gambling", "Such an easy game", "What can go wrong?", "Just one more game", "I'm that 1% who doesn't quit", "YES LETS GO", "I hope this winning streak continues!", "Let's go!", "Yessir, Jackpot", "hell yeah"])
messages_angry = Array[String](["Man what the hell!", "This has to be rigged", "I lost my fortnite cd account..", "Just one more game...", "Last game an I'll quit", "Bruh this is A SCAM", "Gotta keep gambling", "Gamble, gamble and one more time... gamble", "Never quit when gambling", "no way..........", "lost everything, gotta get a loan", "I hope this loan can help me hit big", "I LOVE \"LEGAL\" CASINOS", "I WILL NOT QUIT", "BROTHER THIS MAKES 0 SENSE"])

[node name="Vis" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.866448, 0)
material_override = SubResource("ShaderMaterial_x6rcn")
mesh = SubResource("BoxMesh_0uqiu")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.411272, 0)
shape = SubResource("BoxShape3D_0uqiu")

[node name="UI" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -313.0
offset_top = -64.0
offset_right = 313.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0uqiu")

[node name="money" type="Label" parent="UI/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -310.0
offset_top = -92.0
offset_right = 310.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 111
text = "$0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -310.0
offset_top = 56.0
offset_right = 310.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 71
text = "[E] Collect"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Playtest" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -413.0
offset_top = -124.0
offset_right = 413.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="UI/Playtest"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -310.0
offset_top = -100.0
offset_right = 310.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 71
text = "[E] Playtest to Power ON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaticBody3D" type="StaticBody3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.938346, 0)
shape = SubResource("BoxShape3D_x6rcn")

[node name="NPCTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="NPCTimerPlay" type="Timer" parent="."]
wait_time = 6.0

[node name="NPC" type="MeshInstance3D" parent="."]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, 1.15516, 0.861646, 0.0163366)
visible = false
mesh = SubResource("CapsuleMesh_0uqiu")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NPC"]
transform = Transform3D(0.0874105, 0, 0, 0, -1.0813e-08, 0.0874105, 0, -0.247372, -3.82083e-09, 0.184035, 0.615244, -0.400871)
mesh = SubResource("CylinderMesh_0uqiu")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="NPC"]
transform = Transform3D(0.0521576, 0, 0, 0, -6.82403e-10, 0.0521576, 0, -0.0156116, -2.27988e-09, 0.182773, 0.615244, -0.650928)
mesh = SubResource("CylinderMesh_0uqiu")
surface_material_override/0 = SubResource("StandardMaterial3D_x6rcn")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="NPC"]
transform = Transform3D(0.0874105, 0, 0, 0, -1.0813e-08, 0.0874105, 0, -0.247372, -3.82083e-09, -0.173172, 0.615244, -0.400871)
mesh = SubResource("CylinderMesh_0uqiu")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="NPC"]
transform = Transform3D(0.0521576, 0, 0, 0, -6.82403e-10, 0.0521576, 0, -0.0156116, -2.27988e-09, -0.174434, 0.615244, -0.650928)
mesh = SubResource("CylinderMesh_0uqiu")
surface_material_override/0 = SubResource("StandardMaterial3D_x6rcn")

[node name="Sprite3D" type="Sprite3D" parent="NPC"]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 0.0163366, 1.0632, 0.0582401)
billboard = 2
texture_filter = 0
texture = SubResource("ViewportTexture_0uqiu")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
canvas_item_default_texture_filter = 0
size = Vector2i(125, 102)

[node name="Control" type="Control" parent="SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="SubViewport/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="msg" type="Label" parent="SubViewport/Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Man I love gambling!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_x6rcn")
volume_db = -5.69

[connection signal="timeout" from="NPCTimer" to="." method="_on_npc_timer_timeout"]
[connection signal="timeout" from="NPCTimerPlay" to="." method="_on_npc_timer_play_timeout"]
